--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -15,6 +15,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #343839;
   /* background-image: url(assets/images/wood.jpg) */
 }
 
@@ -99,10 +100,10 @@ body {
 }
 
 
-img {
+/* img {
     width: 100%;
     height: 100%;
-}
+} */
 
 .stars {
   width: 300px;
